--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">TCAP</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Tab 3</string>
+    <string name="title_activity_home">Home</string>
+    <string name="tab_text_1">Tasks</string>
+    <string name="tab_text_2">Progress</string>
     <string name="action_settings">Settings</string>
 </resources>
